<resources>
    <string name="about_copyright">"Copyright © 2010–2013 Oskar Wiksten&lt;br /> Copyright © 2013–2018 The Andor's Trail development team&lt;br /> &lt;br />"</string>
    <string name="app_name">"Andor's Trail"</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_more">More</string>
    <string name="heroinfo_skill">Skills</string>
    <string name="inventory_info">Info</string>
    <string name="inventory_equip">Equip</string>
    <string name="inventory_unequip">Unequip</string>
    <string name="inventory_use">Use</string>
    <string name="inventory_drop">Drop</string>
    <string name="actorinfo_attack">Attack:</string>
    <string name="actorinfo_defense">Defense:</string>
    <string name="actorinfo_movecost">Move cost (AP):</string>
    <string name="traitsinfo_attack_cost">Attack cost (AP):</string>
    <string name="traitsinfo_attack_chance">Attack chance:</string>
    <string name="traitsinfo_attack_damage">Attack damage:</string>
    <string name="traitsinfo_criticalhit_skill">Critical hit skill:</string>
    <string name="traitsinfo_criticalhit_multiplier">Critical multiplier:</string>
    <string name="traitsinfo_defense_chance">Block chance:</string>
    <string name="traitsinfo_defense_damageresist">Damage resistance:</string>
    <string name="iteminfo_category">Category:</string>
    <string name="iteminfo_action_use">Use</string>
    <string name="shop_yourgold">Your gold: %1$d</string>
    <string name="levelup_title">Level up</string>
    <string name="levelup_description">Welcome to level %1$d!</string>
    <string name="levelup_add_health">Increase health (+%1$d HP)</string>
    <string name="levelup_add_attackchance">Increase attack chance (+%1$d)</string>
    <string name="levelup_add_attackdamage">Increase attack damage (+%1$d)</string>
    <string name="levelup_add_blockchance">Increase block chance (+%1$d)</string>
    <string name="about_button1">Help</string>
    <string name="about_button2">Authors</string>
    <string name="about_button3">License</string>
    <string name="actorinfo_currentconditions">Active conditions</string>
    <string name="iteminfo_effect_increase_max_hp">Raises max HP +%1$d</string>
    <string name="iteminfo_effect_increase_max_ap">Raises max AP +%1$d</string>
    <string name="iteminfo_effect_increase_movecost">Move cost penalty +%1$d AP</string>
    <string name="inventory_assign">Assign quick slot</string>
    <string name="inventory_assign_slot1">Slot 1</string>
    <string name="inventory_assign_slot2">Slot 2</string>
    <string name="inventory_assign_slot3">Slot 3</string>
    <string name="actorconditioninfo_constant_effect">Constant effect</string>
    <string name="actorconditioninfo_effect_every_round">Every round</string>
    <string name="actorconditioninfo_effect_every_full_round">Every full round</string>
    <string name="skill_longdescription_weapon_chance">Increases attack chance by %1$d percentage points for each skill level.</string>
    <string name="skillinfo_action_levelup">Level up</string>
    <string name="skill_current_level">Current level: %1$d</string>
    <string name="skill_prerequisite_other_skill">To level up this skill, you need at least level %1$d of the %2$s skill.</string>
    <string name="levelup_adds_new_skillpoint">This level also gives you a new skill point to spend!</string>
    <string name="actorconditioninfo_category">Condition category: %1$s</string>
    <string name="inventory_movetop">Move to top</string>
    <string name="inventory_movebottom">Move to bottom</string>
    <string name="actorinfo_immune_criticals">Immune to critical hits</string>
    <string name="traitsinfo_criticalhit_effectivechance">Effective critical chance:</string>
    <string name="about_button4">About</string>
    <string name="inventory_equip_offhand">Equip (offhand)</string>
    <string name="iteminfo_effect_increase_attack_cost">Increases attack cost by %1$d AP</string>
    <string name="iteminfo_effect_increase_attack_chance">Increases attack chance by %1$d</string>
    <string name="iteminfo_effect_increase_attack_damage">Increases attack damage by %1$d</string>
    <string name="iteminfo_effect_set_damage_modifier">Damage modifier: %1$d%%</string>
    <string name="iteminfo_effect_increase_critical_skill">Increases critical skill by %1$d</string>
    <string name="iteminfo_effect_critical_multiplier">Enables critical hits with a multiplier of x%1$.1f</string>
    <string name="iteminfo_effect_increase_block_chance">Increases block chance by %1$d</string>
    <string name="iteminfo_effect_increase_damage_resistance">Raises damage resistance by %1$d</string>
    <string name="iteminfo_effect_increase_use_cost">Increases AP cost of using items in combat by %1$d AP</string>
    <string name="iteminfo_effect_increase_reequip_cost">Increases AP cost of equipping items in combat by %1$d AP</string>
    <string name="heroinfo_gamestats_quests">Completed quests</string>
    <string name="heroinfo_gamestats_deaths">Times fallen unconscious</string>
    <string name="heroinfo_gamestats_spent_gold">Gold spent in shops</string>
    <string name="heroinfo_gamestats_bonemeals">Bonemeal potions used</string>
    <string name="heroinfo_gamestats_num_used_items">Items used</string>
    <string name="heroinfo_gamestats_visited_maps">Places visited</string>
    <string name="heroinfo_gamestats_fav_item">Most commonly used item</string>
    <string name="heroinfo_gamestats_num_killed_monsters">Monsters killed</string>
    <string name="heroinfo_gamestats_top_boss">Most powerful monster killed</string>
    <string name="heroinfo_gamestats_fav_monsters">Most commonly killed monsters</string>
</resources>