<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow>
        <TextView android:text="@string/actorinfo_movecost" style="@style/traitsinfo_label" />
        <TextView android:id="@id/traitsinfo_move_cost" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/traitsinfo_attack_cost" style="@style/traitsinfo_label" />
        <TextView android:id="@id/traitsinfo_attack_cost" />
    </TableRow>
    <TableRow android:id="@id/traitsinfo_attack_chance_row">
        <TextView android:text="@string/traitsinfo_attack_chance" style="@style/traitsinfo_label" />
        <TextView android:id="@id/traitsinfo_attack_chance" />
    </TableRow>
    <TableRow android:id="@id/traitsinfo_attack_damage_row">
        <TextView android:text="@string/traitsinfo_attack_damage" style="@style/traitsinfo_label" />
        <TextView android:id="@id/traitsinfo_attack_damage" />
    </TableRow>
    <TableRow android:id="@id/traitsinfo_criticalhit_skill_row">
        <TextView android:text="@string/traitsinfo_criticalhit_skill" style="@style/traitsinfo_label" />
        <TextView android:id="@id/traitsinfo_criticalhit_skill" />
    </TableRow>
    <TableRow android:id="@id/traitsinfo_criticalhit_multiplier_row">
        <TextView android:text="@string/traitsinfo_criticalhit_multiplier" style="@style/traitsinfo_label" />
        <TextView android:id="@id/traitsinfo_criticalhit_multiplier" />
    </TableRow>
    <TableRow android:id="@id/traitsinfo_criticalhit_effectivechance_row">
        <TextView android:text="@string/traitsinfo_criticalhit_effectivechance" style="@style/traitsinfo_label" />
        <TextView android:id="@id/traitsinfo_criticalhit_effectivechance" />
    </TableRow>
    <TableRow android:id="@id/traitsinfo_block_chance_row">
        <TextView android:text="@string/traitsinfo_defense_chance" style="@style/traitsinfo_label" />
        <TextView android:id="@id/traitsinfo_block_chance" />
    </TableRow>
    <TableRow android:id="@id/traitsinfo_damageresist_row">
        <TextView android:text="@string/traitsinfo_defense_damageresist" style="@style/traitsinfo_label" />
        <TextView android:id="@id/traitsinfo_damageresist" />
    </TableRow>
    <TableRow android:id="@id/traitsinfo_is_immune_to_critical_hits_row">
        <TextView android:layout_span="2" android:text="@string/actorinfo_immune_criticals" />
    </TableRow>
</merge>