<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="@dimen/dialog_margin" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/levelup_title" android:background="?ui_theme_richframe_bitmap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/levelup_title" android:drawableLeft="@drawable/char_hero" style="@style/titleWithIcon" />
    <TextView android:id="@id/levelup_description" android:background="?ui_theme_stdframe_bitmap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/levelup_description" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AndorsTrail_Style_StdFrame">
        <LinearLayout android:orientation="vertical" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/levelup_add_health" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/levelup_add_health" />
            <Button android:id="@id/levelup_add_attackchance" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/levelup_add_attackchance" />
            <Button android:id="@id/levelup_add_attackdamage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/levelup_add_attackdamage" />
            <Button android:id="@id/levelup_add_blockchance" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/levelup_add_blockchance" />
            <TextView android:id="@id/levelup_adds_new_skillpoint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/levelup_adds_new_skillpoint" android:drawableLeft="@drawable/ui_icon_skill" style="@style/textWithIcon" />
            <ListView android:background="@null" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>