<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="start" android:id="@id/skillinfo_title" android:background="?ui_theme_richframe_bitmap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/heroinfo_skill" android:drawableLeft="@drawable/ui_icon_skill" style="@style/titleWithIcon" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/AndorsTrail_Style_StdFrame">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/dialog_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_gravity="right" android:id="@id/skillinfo_currentlevel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/section_margin" android:text="@string/skill_current_level" />
            <TextView android:id="@id/skillinfo_longdescription" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/section_margin" android:text="@string/skill_longdescription_weapon_chance" />
            <TextView android:id="@id/skillinfo_requirement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/section_margin" android:text="@string/skill_prerequisite_other_skill" />
        </LinearLayout>
    </ScrollView>
    <ListView android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AndorsTrail_Style_StdFrame">
        <Button android:id="@id/skillinfoinfo_action" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/skillinfo_action_levelup" android:layout_weight="1.0" />
        <Button android:id="@id/skillinfoinfo_close" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_close" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>