<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/actorconditioninfo_title" android:background="?ui_theme_richframe_bitmap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/actorinfo_currentconditions" android:drawableLeft="@drawable/equip_weapon" style="@style/titleWithIcon" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AndorsTrail_Style_StdFrame">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/dialog_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/actorconditioninfo_category" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/section_margin" android:text="@string/actorconditioninfo_category" />
            <TextView android:id="@id/actorconditioninfo_constant_effect_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/actorconditioninfo_constant_effect" />
            <com.gpl.rpg.AndorsTrail.view.AbilityModifierInfoView android:id="@id/actorconditioninfo_constant_effect_abilitymodifierinfo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" />
            <TextView android:id="@id/actorconditioninfo_everyround_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/actorconditioninfo_effect_every_round" />
            <LinearLayout android:orientation="vertical" android:id="@id/actorconditioninfo_everyround_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" />
            <TextView android:id="@id/actorconditioninfo_everyfullround_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/actorconditioninfo_effect_every_full_round" />
            <LinearLayout android:orientation="vertical" android:id="@id/actorconditioninfo_everyfullround_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" />
        </LinearLayout>
    </ScrollView>
    <ListView android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AndorsTrail_Style_StdFrame">
        <Button android:id="@id/actorconditioninfo_close" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_close" />
    </LinearLayout>
</LinearLayout>