<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="@dimen/dialog_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:paddingRight="@dimen/dialog_iconpadding_right" android:paddingBottom="@dimen/dialog_iconpadding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon" />
        <LinearLayout android:gravity="left" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/titletext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name" />
            <TextView android:id="@id/about_version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@android:string/unknownName" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/about_button1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_button4" android:layout_weight="1.0" />
        <Button android:id="@id/about_button2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_button2" android:layout_weight="1.0" />
        <Button android:id="@id/about_button3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_button3" android:layout_weight="1.0" />
        <Button android:id="@id/about_button4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_button1" android:layout_weight="1.0" />
    </LinearLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:id="@id/about_contents" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </ScrollView>
</LinearLayout>