<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/iteminfo_title" android:background="?ui_theme_richframe_bitmap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/inventory_info" android:drawableLeft="@drawable/equip_weapon" style="@style/titleWithIcon" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/AndorsTrail_Style_StdFrame">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/dialog_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="italic" android:id="@id/iteminfo_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/section_margin" />
            <TextView android:id="@id/iteminfo_displaytype" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/section_margin">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/iteminfo_category" />
                <TextView android:id="@id/iteminfo_category" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <com.gpl.rpg.AndorsTrail.view.ItemEffectsView android:id="@id/iteminfo_effects" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
    <ListView android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AndorsTrail_Style_StdFrame">
        <Button android:id="@id/iteminfo_action" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/iteminfo_action_use" android:layout_weight="1.0" />
        <Button android:id="@id/iteminfo_close" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_close" android:layout_weight="1.0" />
        <Button android:id="@id/iteminfo_more" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_more" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>